# amiga_arm_app

./: Doxyfile  README.md  github-etiquette.md  libraries.txt  requirements.txt  setup.cfg  setup.cfg.md5sum  shared-repository-model.md
Misc/: data.csv  getTestDetails.py
libs/amiga_arm_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
motor_view/: MotorView.kv  MotorView.py  main.py
src/: Dataset.py  GraphTest.py  TestSingleton.py  config.json  configurator.py  history.txt  main.kv  main.py
src/Images/: .gitignore
src/Sensor/: SensorFake.py  SensorReal.py  __init__.py
src/TestArchive/: .gitignore
src/TestArchive/Tests_2022_03_04/: 2021_12_16_08_28_21_P0_T01.csv  2021_12_16_09_06_15_P0_T02.csv  2021_12_16_09_14_17_P0_T03.csv  2021_12_16_09_33_19_P0_T04.csv  2021_12_16_09_54_06_P0_T05.csv  2021_12_16_10_07_06_P0_T06.csv  2022_03_02_13_54_56_P0_T07.csv
src/TestArchive/Tests_2022_03_23/: 2022_03_23_11_56_32_P0_T01.csv
src/TestArchive/Tests_2022_04_12/: 2022_04_12_14_40_45_P0_T01.csv
src/TestArchive/Tests_2022_06_22/: 2022_06_22_14_14_06_P1_T07.csv  2022_06_22_14_17_40_P1_T08.csv  2022_06_22_14_24_30_P1_T10.csv  2022_06_22_14_29_21_P1_T09.csv  2022_06_22_14_55_22_P1_T10.csv  2022_06_22_14_58_55_P1_T11.csv  2022_06_22_15_03_49_P100_T01.csv  (+2 more)
src/sensors/: Friction_Load.py  Height.py  Humidity.py  IMU.py  Location.py  Temperature.py  Y_Load.py  connections.py  test.py
src/view/: SelectableList.kv  SelectableList.py  SingleSelectableList.kv  SingleSelectableList.py  StaticList.kv  StaticList.py  elements.kv  elements.py  keyboard_man.py
(+235 files in other folders)
