# NOTE: update the `[project]` section with your app details
[metadata]
name = amiga_arm_app
version = 0.0.1
author = Farm-nge, Inc.
author_email = carter.noh08@gmail.com
url = https://github.com/farm-ng/amiga-app-template
download_url = https://github.com/farm-ng/amiga-app-template
keywords = robotics, open-source
license_files = LICENSE
description = Amiga app to collect data from the ARM deice
classifiers =
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

# NOTE: update the the requirements for your app
[options]
python_requires = >=3.6
setup_requires =
    wheel
install_requires =
    wheel
    kivy
    farm_ng_amiga
    numpy
tests_require =
    pytest

# NOTE: do not touch this path unless you know what you are doing
package_dir =
    = libs

[options.extras_require]
dev =
    pytest
    mypy
    pre-commit>=2.0

[flake8]
max-line-length = 120

[mypy]
files = libs/, src/
pretty = True
ignore_missing_imports = True
